<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiProxy</string>
    <string name="description">Android ntlm proxy</string>
    <string name="action_settings">Settings</string>
    <string name="user">User</string>
    <string name="blank"></string>
    <string name="Username">user or domain\\user</string>
    <string name="Password">Password</string>
    <string name="ShowPassword">Show password</string>
    <string name="Domain">Domain(only if you know it):</string>
    <string name="domainView">Domain:</string>
    <string name="Server">Server:</string>
    <string name="InputPort">Input Port:</string>
    <string name="OutputPort">Output Port:</string>
    <string name="domainHint">example.com</string>
    <string name="serverHint">proxy.example.cu or 10.0.0.1</string>
    <string name="portHint">8080</string>
    <string name="run">run</string>
    <string name="stop">stop</string>
    <string name="notif1">UCIntlm is running…</string>
    <string name="notif2">Running WifiProxy for user: </string>
    <string name="notif3">UCIntlm was stopped…</string>
    <string name="AdvancedOptions">Advanced Options</string>
    <string name="passwordHint">password</string>
    <string name="started">UCIntlm started</string>
    <string name="stopped">UCIntlm stopped</string>
    <string name="nodata">There is no enough data to start the service</string>
    <string name="Bypass">Bypass proxy for:</string>
    <string name="BypassHint">127.0.0.1,localhost,*example.cu</string>
    <string name="OnProxy">Configuring WiFi for Proxy use</string>
    <string name="OnNoProxy">Configuring WiFi for No Proxy use</string>
    <string name="Connected">Connected to WiFi</string>
    <string name="GlobalProxy">Set as global proxy</string>
    <string name="Notifications">Notifications</string>
    <string name="delayTime">delay time (min):</string>
    <string name="quotaSpent">% spent</string>
    <string name="networkError">Network Error</string>
    <string name="spending">Spending</string>
    <string name="credentialsError">Credentials Error</string>
    <string name="progresDialogMessage">Please wait</string>
    <string name="none">None</string>
    <string name="notification">Notification</string>
    <string name="toast">Toast</string>
    <string name="bubbleNotification">Bubble notification</string>
    <string name="theme">App theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="aboutUs">About us</string>
    <string name="createdBy">Created by:</string>
    <string name="setGlobalProxyConfiguration">Set Global Proxy Configuration</string>
    <string name="notFunctional">This function is not supported for your mobile</string>
    <string name="wifiSettings">Wi-fi Settings</string>
    <string name="wifiSettingsText">In order to set up the Wi-fi proxy, do it as follows:</string>
    <string name="wifiSettingsCheck">Don\'t show again</string>
    <string name="wifiSettingsGoToWifi">Go to Wi-fi settings</string>
    <string name="wifiSettingsContinue">Continue</string>
    <string name="bubbleNotificationRunning">Bubble Notification Running</string>
    <string name="NTLMProxy">NTLM</string>
    <string name="BasicProxy">Basic</string>
    <string name="DigestProxy">Digest</string>
    <string name="authScheme">Authentication scheme:</string>
    <string name="no_profiles_all">You have no Profiles</string>
    <string name="no_profiles_add">Add a Profile item +</string>
    <string name="successfully_saved_profile_message">Profile saved</string>
    <string name="profiles_title">Profiles</string>
    <string name="name_hint">Name</string>
    <string name="empty_profile_message">Profiles cannot be empty</string>
    <string name="add_profile">New Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name:</string>
    <string name="missing_data_message">No data</string>
    <string name="successfully_profile_updated_message">Profile updated</string>
    <string name="menu_delete_profile">Delete</string>
    <string name="remember_password">Remember password</string>
    <string name="profile_label">Profile:</string>
    <string name="username_empty_error">username cannot be empty</string>
    <string name="password_empty_error">password cannot be empty</string>
    <string name="profile_empty_error">please select a profile</string>
    <string name="add_profile_text">Add profile +</string>
    <string name="no_profile_selected_error">Please select a profile</string>
    <string name="bypassInitText">127.0.0.1,localhost</string>
    <string name="no_firewall_rules_all">You have not Firewall Rules</string>
    <string name="no_firewall_rules_add">Add a Firewall Rule item +</string>
    <string name="successfully_saved_firewallRule_message">Firewall rule saved</string>
    <string name="firewall_rule_activated">Firewall rule activated</string>
    <string name="firewall_rule_deactivated">Firewall rule deactivated</string>
    <string name="firewall_title">Firewall</string>
    <string name="firewallRule_rule_hint"> * | *example.com,*other.com | service.example.com</string>
    <string name="firewallRule_rule_tv">Rule:</string>
    <string name="firewallRule_description_tv">Description:</string>
    <string name="firewallRule_description_hint">This is my rule description</string>
    <string name="empty_firewallRule_message">Firewall rules cannot be empty</string>
    <string name="empty_rule_message">Rule cannot be empty</string>
    <string name="new_firewallRule">New Firewall Rule</string>
    <string name="edit_firewallRule">Edit Firewall Rule</string>
    <string name="successfully_firewallrule_updated_message">Firewall rule updated</string>
    <string name="firewallRule_application_tv">Application:</string>
    <string name="all_applications">All applications</string>
    <string name="local_port_label">Local port:</string>
    <string name="no_traces_all">There are no traces</string>
    <string name="consumption">Consumption:</string>
    <string name="traces_title">Traces</string>
    <string name="trace_url">Requested url:</string>
    <string name="trace_consumption">Consumption:</string>
    <string name="add_as_firewall_rule">Add as firewall rule</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="successfully_added_as_firewallrule">Firewall rule added</string>
    <string name="date">Date:</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="sort_by_consumption">Sort by spending</string>
    <string name="clear_all">Clear all</string>
    <string name="search">Search</string>
    <string name="query_hint">app name or url</string>
    <string name="about_title">About</string>
    <string name="version_text">Version</string>
    <string name="sourcecode_text">Source code</string>
    <string name="author_text">Author</string>
    <string name="profile_name_empty_error">Name cannot be empty</string>
    <string name="profile_equal_name_error">There is a profile with that name</string>
    <string name="profile_server_empty_error">Server cannot be empty</string>
    <string name="profile_port_empty_error">Input port cannot be empty</string>
    <string name="profile_port_outofrange_error">Input port must be between %d and %d</string>
    <string name="profile_bypass_syntax_error">Bypass syntax error</string>
    <string name="profile_server_invalid_error">Server invalid</string>
    <string name="profile_domain_invalid_error">Domain invalid</string>
    <string name="proxy_port_empty_error">Local port cannot be empty</string>
    <string name="proxy_port_outofrange_error">Local port must be between %d and %d</string>
    <string name="proxy_credentials_check_message">Checking credentials</string>
    <string name="proxy_credentials_error">Credentials error</string>
    <string name="proxy_credentials_error_message">Please check your username and password</string>
    <string name="accept_text">Accept</string>
    <string name="proxy_network_error_message">Please connect to a wifi network before start the service</string>
    <string name="proxy_network_error">Network error</string>
    <string name="proxy_connectiontimeout_error">Connection timeout</string>
    <string name="proxy_connectiontimeout_error_message">Connection timeout, please check your profile configuration</string>
    <string name="proxy_unknownhost_error">Unknown proxy server</string>
    <string name="proxy_unknownhost_error_message">Please check your profile configuration</string>
    <string name="proxy_connection_error">Connection error</string>
    <string name="proxy_connection_error_message">Connection error, please check your profile configuration</string>
    <string name="error_starting_proxy_service_title">Error starting proxy service</string>
    <string name="error_starting_proxy_service_message">Please ensure the local port is not being used by other application</string>

</resources>