<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sortByConsumption"
        android:title="@string/sort_by_consumption"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/clear_all"
        android:title="@string/clear_all"
        app:showAsAction="never"
        />

    <item android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="200"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView">

    </item>

</menu>