<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firewallRule_rule_tv"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_firewallRule_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firewallRule_rule_hint"
                android:imeOptions="actionUnspecified"
                android:inputType="textUri"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firewallRule_description_tv"
            android:layout_marginTop="20dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_firewallRule_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firewallRule_description_hint"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_size" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>